--- a/src/Catalyst.Common/Catalyst.Common.csproj
+++ b/src/Catalyst.Common/Catalyst.Common.csproj
@@ -21,6 +21,7 @@
         <PackageReference Include="Ipfs.Core" Version="0.52.2" />
         <PackageReference Include="Ipfs.Engine" Version="0.11.3" />
         <PackageReference Include="Ipfs.HttpGateway" Version="0.4.0" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.6" />
         <PackageReference Include="Multiformats.Hash" Version="1.5.0" />
         <PackageReference Include="Nethereum.KeyStore" Version="3.3.0" />
         <PackageReference Include="Nethereum.RLP" Version="3.3.0" />
@@ -39,6 +40,7 @@
         <PackageReference Include="Serilog.Sinks.File" Version="4.0.0" />
         <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="2.3.4" />
         <PackageReference Include="SharpRepository.AzureDocumentDbRepository" Version="2.0.2-alpha4" />
+        <PackageReference Include="SharpRepository.EfCoreRepository" Version="2.0.2.2" />
         <PackageReference Include="SharpRepository.InMemoryRepository" Version="2.0.3.1" />
         <PackageReference Include="SharpRepository.Ioc.Autofac" Version="2.0.4.2" />
         <PackageReference Include="SharpRepository.Repository" Version="2.0.4.6" />
