--- a/src/Catalyst.Core.Lib/Catalyst.Core.Lib.csproj
+++ b/src/Catalyst.Core.Lib/Catalyst.Core.Lib.csproj
@@ -22,6 +22,7 @@
         <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.2.0" />
         <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="2.2.0" />
         <PackageReference Include="Nito.Comparers" Version="6.0.0" />
+        <PackageReference Include="SharpRepository.EfCoreRepository" Version="2.0.2.2" />
     </ItemGroup>
     <ItemGroup>
         <ProjectReference Include="..\Catalyst.Common\Catalyst.Common.csproj" />
