--- a/src/Catalyst.Core/Catalyst.Core.csproj
+++ b/src/Catalyst.Core/Catalyst.Core.csproj
@@ -16,7 +16,10 @@
         <PackageReference Include="AutofacSerilogIntegration" Version="2.0.0" />
         <PackageReference Include="Catalyst.Cryptography.BulletProofs.Wrapper" Version="0.0.1.10324-beta" />
         <PackageReference Include="Common.Logging.Serilog" Version="4.3.6" />
+        <PackageReference Include="DotNetty.Codecs" Version="0.6.0" />
+        <PackageReference Include="DotNetty.Codecs.Http" Version="0.6.0" />
         <PackageReference Include="DotNetty.Codecs.Protobuf" Version="0.6.0" />
+        <PackageReference Include="DotNetty.Transport.Libuv" Version="0.6.0" />
         <PackageReference Include="GraphQL" Version="2.4.0" />
         <PackageReference Include="Humanizer" Version="2.6.2" />
         <PackageReference Include="Ipfs.Api" Version="0.23.6" />
