--- a/src/Catalyst.Core.Modules.Cryptography.BulletProofs.Tests/Catalyst.Core.Modules.Cryptography.BulletProofs.Tests.csproj
+++ b/src/Catalyst.Core.Modules.Cryptography.BulletProofs.Tests/Catalyst.Core.Modules.Cryptography.BulletProofs.Tests.csproj
@@ -11,4 +11,7 @@
     <ItemGroup>
         <ProjectReference Include="..\Catalyst.Core.Modules.Cryptography.BulletProofs\Catalyst.Core.Modules.Cryptography.BulletProofs.csproj" />
     </ItemGroup>
+    <ItemGroup>
+      <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.3.0" />
+    </ItemGroup>
 </Project>
