--- a/src/Catalyst.Core.Modules.KeySigner/Catalyst.Core.Modules.KeySigner.csproj
+++ b/src/Catalyst.Core.Modules.KeySigner/Catalyst.Core.Modules.KeySigner.csproj
@@ -10,7 +10,10 @@
     <Import Project="../Common.Packable.props" />
     <Import Project="../Common.Projects.props" />
     <ItemGroup>
-        <ProjectReference Include="..\Catalyst.Abstractions\Catalyst.Abstractions.csproj" />
-        <ProjectReference Include="..\Catalyst.Core.Lib\Catalyst.Core.Lib.csproj" />
+        <ProjectReference Include="..\Catalyst.Abstractions\Catalyst.Abstractions.csproj"    />
+        <ProjectReference Include="..\Catalyst.Core.Lib\Catalyst.Core.Lib.csproj"    />
+    </ItemGroup>
+    <ItemGroup>
+      <PackageReference Include="BouncyCastle.NetCore" Version="1.8.5" />
     </ItemGroup>
 </Project>
