--- a/src/Catalyst.Core.Modules.Rpc.Server.Tests/Catalyst.Core.Modules.Rpc.Server.Tests.csproj
+++ b/src/Catalyst.Core.Modules.Rpc.Server.Tests/Catalyst.Core.Modules.Rpc.Server.Tests.csproj
@@ -12,8 +12,14 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Catalyst.Abstractions\Catalyst.Abstractions.csproj" />
+      <ProjectReference Include="..\Catalyst.Core.Lib\Catalyst.Core.Lib.csproj" />
       <ProjectReference Include="..\Catalyst.Core.Modules.Rpc.Server\Catalyst.Core.Modules.Rpc.Server.csproj" />
       <ProjectReference Include="..\Catalyst.TestUtils\Catalyst.TestUtils.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="DotNetty.Transport" Version="0.6.0" />
+      <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.3.0" />
     </ItemGroup>
 
 </Project>
