--- a/src/Catalyst.Core.Modules.Authentication.Tests/Catalyst.Core.Modules.Authentication.Tests.csproj
+++ b/src/Catalyst.Core.Modules.Authentication.Tests/Catalyst.Core.Modules.Authentication.Tests.csproj
@@ -14,7 +14,15 @@
       <ProjectReference Include="..\Catalyst.Abstractions\Catalyst.Abstractions.csproj" />
       <ProjectReference Include="..\Catalyst.Core.Lib\Catalyst.Core.Lib.csproj" />
       <ProjectReference Include="..\Catalyst.Core.Modules.Authentication\Catalyst.Core.Modules.Authentication.csproj" />
+      <ProjectReference Include="..\Catalyst.Core.Modules.Cryptography.BulletProofs\Catalyst.Core.Modules.Cryptography.BulletProofs.csproj" />
       <ProjectReference Include="..\Catalyst.TestUtils\Catalyst.TestUtils.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="DotNetty.Transport" Version="0.6.0" />
+      <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.3.0" />
+      <PackageReference Include="SharpRepository.InMemoryRepository" Version="2.0.3.1" />
+      <PackageReference Include="SimpleBase" Version="1.3.1" />
     </ItemGroup>
 
 </Project>
