--- a/src/Catalyst.Core.Modules.Consensus.Tests/Catalyst.Core.Modules.Consensus.Tests.csproj
+++ b/src/Catalyst.Core.Modules.Consensus.Tests/Catalyst.Core.Modules.Consensus.Tests.csproj
@@ -8,9 +8,25 @@
         <PublicSign>true</PublicSign>
     </PropertyGroup>
     <Import Project="../Common.TestProjects.props" />
+    
+    <!-- catalyst deps -->
     <ItemGroup>
-      <ProjectReference Include="..\Catalyst.Abstractions\Catalyst.Abstractions.csproj" />
-      <ProjectReference Include="..\Catalyst.Core.Modules.Consensus\Catalyst.Core.Modules.Consensus.csproj" />
-      <ProjectReference Include="..\Catalyst.TestUtils\Catalyst.TestUtils.csproj" />
+        <ProjectReference Include="..\..\submodules\nethermind\src\Dirichlet\Nethermind.Dirichlet.Numerics\Nethermind.Dirichlet.Numerics.csproj" />
+        <ProjectReference Include="..\Catalyst.Abstractions\Catalyst.Abstractions.csproj" />
+        <ProjectReference Include="..\Catalyst.Core.Lib\Catalyst.Core.Lib.csproj" />
+        <ProjectReference Include="..\Catalyst.Core.Modules.Consensus\Catalyst.Core.Modules.Consensus.csproj" />
+        <ProjectReference Include="..\Catalyst.TestUtils\Catalyst.TestUtils.csproj" />
+    </ItemGroup>
+
+    <!-- private deps -->
+    <ItemGroup>
+        <PackageReference Include="DotNetty.Transport" Version="0.6.0" />
+        <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="3.0.0" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.3.0" />
+        <PackageReference Include="Multiformats.Hash" Version="1.5.0" />
+        <PackageReference Include="Nethereum.Hex" Version="3.4.0" />
+        <PackageReference Include="Nito.Comparers.Core" Version="6.0.0" />
+        <PackageReference Include="SharpRepository.EfCoreRepository" Version="2.0.2.2" />
+        <PackageReference Include="SimpleBase" Version="1.3.1" />
     </ItemGroup>
 </Project>
