--- a/src/Catalyst.Core.Modules.Cryptography.BulletProofs/Catalyst.Core.Modules.Cryptography.BulletProofs.csproj
+++ b/src/Catalyst.Core.Modules.Cryptography.BulletProofs/Catalyst.Core.Modules.Cryptography.BulletProofs.csproj
@@ -15,12 +15,12 @@
     </ItemGroup>
     <ItemGroup>
         <PackageReference Include="Autofac" Version="4.8.1" />
-        <PackageReference Include="Nethereum.Hex" Version="3.3.0" />
+        <PackageReference Include="Nethereum.Hex" Version="3.4.0" />
         <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     </ItemGroup>
     <ItemGroup>
-        <None Include="Runtimes\**\*.*" PackagePath="Runtimes\" Pack="true">
-            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        <None Include="Runtimes\**\*.*" PackagePath="\" Pack="true">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </None>
     </ItemGroup>
     <!-- build tasks for Catalyst.Cryptography.FFI.Rust -->
@@ -30,21 +30,21 @@
         <Exec Condition="'$([System.Runtime.InteropServices.RuntimeInformation]::IsOSPlatform($([System.Runtime.InteropServices.OSPlatform]::OSX)))' == 'true'" Command="cargo build --manifest-path ../../submodules/Cryptography.FFI.Rust/Cargo.toml --target-dir ./Runtimes/osx-x64" ConsoleToMSBuild="true" />
         <ItemGroup Condition="'$([System.Runtime.InteropServices.RuntimeInformation]::IsOSPlatform($([System.Runtime.InteropServices.OSPlatform]::OSX)))' == 'true'">
             <None Include=".\Runtimes\osx-x64\*\libcatalystffi.dylib" Link="libcatalystffi.dylib">
-                <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+                <CopyToOutputDirectory>Always</CopyToOutputDirectory>
             </None>
         </ItemGroup>
         <!-- build for windows -->
         <Exec Condition="'$([System.Runtime.InteropServices.RuntimeInformation]::IsOSPlatform($([System.Runtime.InteropServices.OSPlatform]::Windows)))' == 'true'" Command="cargo build --manifest-path ..\..\submodules\Cryptography.FFI.Rust\Cargo.toml --target-dir .\Runtimes\win-x64" ConsoleToMSBuild="true" />
         <ItemGroup Condition="'$([System.Runtime.InteropServices.RuntimeInformation]::IsOSPlatform($([System.Runtime.InteropServices.OSPlatform]::Windows)))' == 'true'">
             <None Include=".\Runtimes\win-x64\*\catalystffi.dll" Link="catalystffi.dll">
-                <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+                <CopyToOutputDirectory>Always</CopyToOutputDirectory>
             </None>
         </ItemGroup>
         <!-- build for *nix -->
         <Exec Condition="'$([System.Runtime.InteropServices.RuntimeInformation]::IsOSPlatform($([System.Runtime.InteropServices.OSPlatform]::Linux)))' == 'true'" Command="cargo build --manifest-path ../../submodules/Cryptography.FFI.Rust/Cargo.toml --target-dir ./Runtimes/linux-x64" ConsoleToMSBuild="true" />
         <ItemGroup Condition="'$([System.Runtime.InteropServices.RuntimeInformation]::IsOSPlatform($([System.Runtime.InteropServices.OSPlatform]::Linux)))' == 'true'">
             <None Include=".\Runtimes\linux-x64/*\libcatalystffi.so" Link="libcatalystffi.so">
-                <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+                <CopyToOutputDirectory>Always</CopyToOutputDirectory>
             </None>
         </ItemGroup>
     </Target>
