--- a/src/Catalyst.Core.Modules.Keystore.Tests/Catalyst.Core.Modules.Keystore.Tests.csproj
+++ b/src/Catalyst.Core.Modules.Keystore.Tests/Catalyst.Core.Modules.Keystore.Tests.csproj
@@ -17,4 +17,8 @@
       <ProjectReference Include="..\Catalyst.TestUtils\Catalyst.TestUtils.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.3.0" />
+    </ItemGroup>
+
 </Project>
