--- a/src/Catalyst.Core.Modules.Kvm.Tests/Catalyst.Core.Modules.Kvm.Tests.csproj
+++ b/src/Catalyst.Core.Modules.Kvm.Tests/Catalyst.Core.Modules.Kvm.Tests.csproj
@@ -11,4 +11,7 @@
     <ItemGroup>
       <ProjectReference Include="..\Catalyst.Core.Modules.Kvm\Catalyst.Core.Modules.Kvm.csproj" />
     </ItemGroup>
+    <ItemGroup>
+      <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.3.0" />
+    </ItemGroup>
 </Project>
