--- a/src/Catalyst.Core.Modules.P2P.Discovery.Hastings/Catalyst.Core.Modules.P2P.Discovery.Hastings.csproj
+++ b/src/Catalyst.Core.Modules.P2P.Discovery.Hastings/Catalyst.Core.Modules.P2P.Discovery.Hastings.csproj
@@ -10,7 +10,11 @@
     <Import Project="../Common.Packable.props" />
     <Import Project="../Common.Projects.props" />
     <ItemGroup>
-      <ProjectReference Include="..\Catalyst.Abstractions\Catalyst.Abstractions.csproj" />
-      <ProjectReference Include="..\Catalyst.Core.Lib\Catalyst.Core.Lib.csproj" />
+      <ProjectReference Include="..\Catalyst.Abstractions\Catalyst.Abstractions.csproj"   />
+      <ProjectReference Include="..\Catalyst.Core.Lib\Catalyst.Core.Lib.csproj"   />
+    </ItemGroup>
+    <ItemGroup>
+      <PackageReference Include="DotNetty.Transport" Version="0.6.0"   />
+      <PackageReference Include="SharpRepository.Repository" Version="2.0.4.6"   />
     </ItemGroup>
 </Project>
