--- a/src/Catalyst.Core.Modules.Rpc.Client.Tests/Catalyst.Core.Modules.Rpc.Client.Tests.csproj
+++ b/src/Catalyst.Core.Modules.Rpc.Client.Tests/Catalyst.Core.Modules.Rpc.Client.Tests.csproj
@@ -14,5 +14,10 @@
       <ProjectReference Include="..\Catalyst.Core.Modules.Rpc.Client\Catalyst.Core.Modules.Rpc.Client.csproj" />
       <ProjectReference Include="..\Catalyst.TestUtils\Catalyst.TestUtils.csproj" />
     </ItemGroup>
+    
+    <ItemGroup>
+      <PackageReference Include="DotNetty.Transport" Version="0.6.0" />
+      <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.3.0" />
+    </ItemGroup>
 
 </Project>
