--- a/src/Catalyst.Core.Modules.Rpc.Client/Catalyst.Core.Modules.Rpc.Client.csproj
+++ b/src/Catalyst.Core.Modules.Rpc.Client/Catalyst.Core.Modules.Rpc.Client.csproj
@@ -13,6 +13,10 @@
       <ProjectReference Include="..\Catalyst.Core.Lib\Catalyst.Core.Lib.csproj" />
     </ItemGroup>
     <ItemGroup>
-      <PackageReference Include="Serilog" Version="2.8.0" />
+      <PackageReference Include="DotNetty.Codecs.Protobuf" Version="0.6.0"    />
+      <PackageReference Include="DotNetty.Transport" Version="0.6.0"    />
+      <PackageReference Include="Multiformats.Base" Version="2.0.1"   />
+      <PackageReference Include="Nethereum.RLP" Version="3.4.0"   />
+      <PackageReference Include="Serilog" Version="2.8.0"   />
     </ItemGroup>
 </Project>
