--- a/src/Catalyst.Core.Modules.Rpc.Server/Catalyst.Core.Modules.Rpc.Server.csproj
+++ b/src/Catalyst.Core.Modules.Rpc.Server/Catalyst.Core.Modules.Rpc.Server.csproj
@@ -10,7 +10,14 @@
     <Import Project="../Common.Packable.props" />
     <Import Project="../Common.Projects.props" />
     <ItemGroup>
-      <ProjectReference Include="..\Catalyst.Abstractions\Catalyst.Abstractions.csproj" />
-      <ProjectReference Include="..\Catalyst.Core.Lib\Catalyst.Core.Lib.csproj" />
+      <ProjectReference Include="..\..\..\multiformats-dotnet\MultiFormats.MultiHash\src\MultiFormats.MultiHash.csproj" />
+      <ProjectReference Include="..\Catalyst.Abstractions\Catalyst.Abstractions.csproj"   />
+      <ProjectReference Include="..\Catalyst.Core.Lib\Catalyst.Core.Lib.csproj"   />
+    </ItemGroup>
+    <ItemGroup>
+      <PackageReference Include="DotNetty.Codecs.Protobuf" Version="0.6.0"   />
+      <PackageReference Include="DotNetty.Transport" Version="0.6.0"   />
+      <PackageReference Include="Multiformats.Hash" Version="1.5.0" />
+      <PackageReference Include="SharpRepository.Repository" Version="2.0.4.6" />
     </ItemGroup>
 </Project>
