--- a/src/Catalyst.Core.Modules.Web3.Tests/Catalyst.Core.Modules.Web3.Tests.csproj
+++ b/src/Catalyst.Core.Modules.Web3.Tests/Catalyst.Core.Modules.Web3.Tests.csproj
@@ -11,4 +11,10 @@
     <ItemGroup>
         <ProjectReference Include="..\Catalyst.Core.Modules.Web3\Catalyst.Core.Modules.Web3.csproj" />
     </ItemGroup>
+    <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.2.0" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0" />
+      <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.3.0" />
+      <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="4.0.1" />
+    </ItemGroup>
 </Project>
