--- a/src/Catalyst.Core.Modules.Web3/Catalyst.Core.Modules.Web3.csproj
+++ b/src/Catalyst.Core.Modules.Web3/Catalyst.Core.Modules.Web3.csproj
@@ -10,21 +10,28 @@
     <Import Project="../Common.Packable.props" />
     <Import Project="../Common.Projects.props" />
     <ItemGroup>
-      <ProjectReference Include="..\Catalyst.Abstractions\Catalyst.Abstractions.csproj" />
-      <ProjectReference Include="..\Catalyst.Core.Lib\Catalyst.Core.Lib.csproj" />
+      <ProjectReference Include="..\..\..\multiformats-dotnet\MultiFormats.MultiBase\src\MultiFormats.MultiBase.csproj"  />
+      <ProjectReference Include="..\..\submodules\nethermind\src\Dirichlet\Nethermind.Dirichlet.Numerics\Nethermind.Dirichlet.Numerics.csproj" />
+      <ProjectReference Include="..\Catalyst.Abstractions\Catalyst.Abstractions.csproj"    />
+      <ProjectReference Include="..\Catalyst.Core.Lib\Catalyst.Core.Lib.csproj"    />
     </ItemGroup>
     <ItemGroup>
-        <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="4.3.1" />
-        <PackageReference Include="Google.Protobuf" Version="3.9.1" />
-        <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
-        <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
-        <PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="2.2.0" />
-        <PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="2.2.0" />
-        <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.2.0" />
-        <PackageReference Include="Serilog.AspNetCore" Version="2.1.1" />
-        <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="4.0.1" />
-        <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="4.0.1" />
-        <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="4.0.1" />
-        <PackageReference Include="AutofacSerilogIntegration" Version="2.0.0" />
+        <PackageReference Include="Autofac.Configuration" Version="4.1.0"    />
+        <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="4.3.1"    />
+        <PackageReference Include="Google.Protobuf" Version="3.9.1"    />
+        <PackageReference Include="Microsoft.AspNetCore" Version="2.2.0"    />
+        <PackageReference Include="Microsoft.AspNetCore.Hosting.Abstractions" Version="2.2.0"    />
+        <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0"    />
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5"    />
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="2.2.0"   />
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="2.2.0"   />
+        <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.2.0"   />
+        <PackageReference Include="Multiformats.Hash" Version="1.5.0"   />
+        <PackageReference Include="Serilog.AspNetCore" Version="2.1.1"   />
+        <PackageReference Include="SharpRepository.Repository" Version="2.0.4.6"   />
+        <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="4.0.1"   />
+        <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="4.0.1"   />
+        <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="4.0.1"   />
+        <PackageReference Include="AutofacSerilogIntegration" Version="2.0.0"   />
     </ItemGroup>
 </Project>
