--- a/src/Catalyst.Modules.POA.Consensus.Tests/Catalyst.Modules.POA.Consensus.Tests.csproj
+++ b/src/Catalyst.Modules.POA.Consensus.Tests/Catalyst.Modules.POA.Consensus.Tests.csproj
@@ -20,6 +20,8 @@
       <ProjectReference Include="..\Catalyst.Modules.POA.Consensus\Catalyst.Modules.POA.Consensus.csproj" />
     </ItemGroup>
     <ItemGroup>
+      <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.3.0" />
+      <PackageReference Include="Multiformats.Hash" Version="1.5.0" />
       <PackageReference Include="SharpRepository.InMemoryRepository" Version="2.0.3.1" />
     </ItemGroup>
 </Project>
