--- a/src/Catalyst.Modules.POA.P2P.Discovery.Consortium.Tests/Catalyst.Modules.POA.P2P.Discovery.Consortium.Tests.csproj
+++ b/src/Catalyst.Modules.POA.P2P.Discovery.Consortium.Tests/Catalyst.Modules.POA.P2P.Discovery.Consortium.Tests.csproj
@@ -19,5 +19,9 @@
         <ProjectReference Include="..\Catalyst.TestUtils\Catalyst.TestUtils.csproj" />
         <ProjectReference Include="..\Catalyst.Modules.POA.Consensus\Catalyst.Modules.POA.Consensus.csproj" />
     </ItemGroup>
+    <ItemGroup>
+      <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.3.0" />
+      <PackageReference Include="Multiformats.Hash" Version="1.5.0" />
+    </ItemGroup>
     <Import Project="../Common.TestProjects.props" />
 </Project>
