--- a/src/Catalyst.Modules.POA.P2P.Discovery.Consortium/Catalyst.Modules.POA.P2P.Discovery.Consortium.csproj
+++ b/src/Catalyst.Modules.POA.P2P.Discovery.Consortium/Catalyst.Modules.POA.P2P.Discovery.Consortium.csproj
@@ -11,8 +11,11 @@
     </PropertyGroup>
     <Import Project="../Common.Projects.props" />
     <ItemGroup>
-        <ProjectReference Include="..\Catalyst.Protocol\Catalyst.Protocol.csproj" />
-        <ProjectReference Include="..\Catalyst.Abstractions\Catalyst.Abstractions.csproj" />
-        <ProjectReference Include="..\Catalyst.Core.Lib\Catalyst.Core.Lib.csproj" />
+        <ProjectReference Include="..\Catalyst.Protocol\Catalyst.Protocol.csproj"   />
+        <ProjectReference Include="..\Catalyst.Abstractions\Catalyst.Abstractions.csproj"   />
+        <ProjectReference Include="..\Catalyst.Core.Lib\Catalyst.Core.Lib.csproj"   />
+    </ItemGroup>
+    <ItemGroup>
+      <PackageReference Include="SharpRepository.Repository" Version="2.0.4.6"   />
     </ItemGroup>
 </Project>
