--- a/src/Catalyst.Protocol.Tests/Catalyst.Protocol.Tests.csproj
+++ b/src/Catalyst.Protocol.Tests/Catalyst.Protocol.Tests.csproj
@@ -20,6 +20,7 @@
     <ProjectReference Include="..\Catalyst.TestUtils\Catalyst.TestUtils.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.3.0" />
     <PackageReference Include="Multiformats.Hash" Version="1.5.0" />
   </ItemGroup>
 </Project>
