--- a/src/Catalyst.Simulator/Catalyst.Simulator.csproj
+++ b/src/Catalyst.Simulator/Catalyst.Simulator.csproj
@@ -11,9 +11,12 @@
     <Import Project="../Common.Projects.props" />
     <ItemGroup>
         <PackageReference Include="CommandLineParser" Version="2.6.0" />
+        <PackageReference Include="DotNetty.Transport" Version="0.6.0" />
+        <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="3.0.0" />
         <PackageReference Include="NSubstitute" Version="4.2.1" />
     </ItemGroup>
     <ItemGroup>
+      <ProjectReference Include="..\..\submodules\nethermind\src\Dirichlet\Nethermind.Dirichlet.Numerics\Nethermind.Dirichlet.Numerics.csproj" />
       <ProjectReference Include="..\Catalyst.Core.Modules.Cryptography.BulletProofs\Catalyst.Core.Modules.Cryptography.BulletProofs.csproj" />
       <ProjectReference Include="..\Catalyst.Core.Modules.KeySigner\Catalyst.Core.Modules.KeySigner.csproj" />
       <ProjectReference Include="..\Catalyst.Core.Modules.Keystore\Catalyst.Core.Modules.Keystore.csproj" />
