--- a/src/Common.Projects.props
+++ b/src/Common.Projects.props
@@ -28,4 +28,16 @@
     <ItemGroup>
         <None Include="$(MSBuildThisFileDirectory)../LICENSE" PackagePath="" Pack="true" />
     </ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="Dawn.Guard" Version="1.9.0"  />
+        <PackageReference Include="Autofac" Version="4.8.1" />
+        <PackageReference Include="Google.Protobuf" Version="3.9.1" />
+        <PackageReference Include="Common.Logging.Serilog" Version="4.3.6"   />
+        <PackageReference Include="Serilog.Extensions.Logging" Version="2.0.4" />
+        <PackageReference Include="Serilog.Enrichers.Environment" Version="2.1.3" />
+        <PackageReference Include="Serilog.Enrichers.Thread" Version="3.1.0" />
+        <PackageReference Include="Serilog.Settings.Configuration" Version="3.1.0" />
+        <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
+        <PackageReference Include="Serilog.Sinks.File" Version="4.0.0"   />
+    </ItemGroup>
 </Project>
