--- a/.gitmodules
+++ b/.gitmodules
@@ -7,12 +7,15 @@
 [submodule "submodules/Cryptography.FFI.Rust"]
 	path = submodules/Cryptography.FFI.Rust
 	url = https://github.com/catalyst-network/Cryptography.FFI.Rust.git
-[submodule "submodules/net-ipfs-core"]
-	path = submodules/net-ipfs-core
-	url = https://github.com/catalyst-network/net-ipfs-core.git
 [submodule "submodules/net-ipfs-http-gateway"]
 	path = submodules/net-ipfs-http-gateway
 	url = https://github.com/catalyst-network/net-ipfs-http-gateway.git
 [submodule "submodules/net-ipfs-engine"]
 	path = submodules/net-ipfs-engine
 	url = https://github.com/catalyst-network/net-ipfs-engine.git
+[submodule "submodules/libp2p-dotnet"]
+	path = submodules/libp2p-dotnet
+	url = git@github.com:thedotnetleague/libp2p-dotnet.git
+[submodule "submodules/multiformats-dotnet"]
+	path = submodules/multiformats-dotnet
+	url = git@github.com:thedotnetleague/multiformats-dotnet.git
