--- a/src/Catalyst.Core.Modules.Web3/Catalyst.Core.Modules.Web3.csproj
+++ b/src/Catalyst.Core.Modules.Web3/Catalyst.Core.Modules.Web3.csproj
@@ -10,7 +10,7 @@
     <Import Project="../Common.Packable.props" />
     <Import Project="../Common.Projects.props" />
     <ItemGroup>
-      <ProjectReference Include="..\..\..\multiformats-dotnet\MultiFormats.MultiBase\src\MultiFormats.MultiBase.csproj"  />
+      <ProjectReference Include="..\..\submodules\multiformats-dotnet\MultiFormats.MultiBase\src\MultiFormats.MultiBase.csproj"  />
       <ProjectReference Include="..\..\submodules\nethermind\src\Dirichlet\Nethermind.Dirichlet.Numerics\Nethermind.Dirichlet.Numerics.csproj" />
       <ProjectReference Include="..\Catalyst.Abstractions\Catalyst.Abstractions.csproj"    />
       <ProjectReference Include="..\Catalyst.Core.Lib\Catalyst.Core.Lib.csproj"    />
