--- a/appveyor.yml
+++ b/appveyor.yml
@@ -29,7 +29,7 @@ pull_requests:
   do_not_increment_build_number: true
 
 build_script:
-  - dotnet build -c Release
+  - dotnet build src -c Release
 
 after_test:
     - choco install docfx -y --version 2.42 --force
